<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv"
                style="@style/textViewStyle"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/appname"
                android:textColor="#19A3D1"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/signup_btn"
                style="@style/buttonStyle"
                android:background="@drawable/round_button_style"
                android:text="@string/signup" />
            
             <Button
                android:id="@+id/login_btn"
                style="@style/buttonStyle"
                android:background="@drawable/round_button_style"
                android:text="@string/login" />
             
        </LinearLayout>
    </LinearLayout>

</LinearLayout>